fix: theme toggle sits right next to hamburger with minimal gap

--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -222,7 +222,8 @@
     .theme-toggle-mobile {
       display: block;
       margin-left: auto;
-      padding: 0.5rem;
+      margin-right: 0;
+      padding: 0.5rem 4px;
       color: var(--global-text-color);
       cursor: pointer;
       font-size: 1.1em;
@@ -320,7 +321,6 @@
   @media (max-width: 924px) {
     button {
       display: block;
-      margin-left: auto;
 
       &:hover,
       &:focus {
